tests/snapshots/examples_fixtures/namespaces__namespace_missing_import_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/namespaces/namespace_missing_import_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/namespaces/namespace_missing_import_error.flx:1:1
  |
1 | print(Modules.Data.MyFile.value());
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/namespaces/namespace_missing_import_error.flx:1:1
  |
1 | print(Modules.Data.MyFile.value());
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E013]: Module Not Imported

Module `Modules.Data.MyFile` is not imported.

  examples/namespaces/namespace_missing_import_error.flx:1:7
  |
1 | print(Modules.Data.MyFile.value());
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Modules.Data.MyFile`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.

Found 3 errors.
== stdout ==
<not executed>
